--- a/src/main/resources/templates/signon.html
+++ b/src/main/resources/templates/signon.html
@@ -13,71 +13,18 @@
 <body>
 
 <div id="header-container" class="dark">
-    <div id="header-content" class="header-dark">
-        <div id="header-home-container" class="dark">
-            <a href="/" class="dark">ConDelu Meals</a>
-        </div>
-        <a class="dark emphasize" href="/">Order</a>
-        <a class="dark" href="/">View Orders</a>
-        <a class="dark" href="/menu">Menu</a>
-        <a class="dark" href="/">Meal Plans</a>
-        <a class="dark" href="/">TSA 1</a>
-        <a class="dark" href="/">TSA 2</a>
-        <a class="dark emphasize" href="/signon">Account</a>
-    </div>
-    <div id="header-image-container">
-        <svg viewBox="0 0 132.29166 132.29166" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" id="header-svg">
-            <path
-                    id="path20"
-                    style="fill-opacity:1;stroke:none;stroke-width:2.64636;stroke-linecap:round;stroke-opacity:1"
-                    d="M 0,0 V 132.29166 H 132.29166 C 110.24309,110.24309 88.194836,88.194997 88.194616,77.170482 88.194386,66.145967 110.24266,66.145993 110.24288,55.121699 110.2431,44.097405 88.19442,22.048589 66.145832,0 Z" />
-        </svg>
-    </div>
+    <!-- TODO: Add header -->
 </div>
+
 
 <div id="signon-content">
 
-    <div id="toggle-signon-mode">
-        <h3>Sign Up</h3>
-        <label id="signon-switch-label">
-            <input type="checkbox" id="signon-switch-input">
-            <span id="signon-switch"></span>
-        </label>
-        <h3>Sign In</h3>
-    </div>
-
-
-    <form id="signon-container">
-        <h2 id="signon-header">Sign Up With Us!</h2>
-        <p id="signon-text">Creating an account with us allows you to earn rewards, create meal plans, and streamline future orders!</p>
-        <div id="signon-name-container" class="signon-container">
-            <label id="signon-name-label" class="label-signon">
-                Name
-            </label>
-            <input type="text" id="signon-name-input" autocomplete="username">
-        </div>
-        <div id="signon-email-container" class="signon-container">
-            <label id="signon-email-label" class="label-signon">
-                Email
-            </label>
-            <input type="email" id="signon-email-input" autocomplete="email">
-        </div>
-        <div id="signon-password-container" class="signon-container">
-            <label id="signon-password-label" class="label-signon">
-                Password
-            </label>
-            <input type="password" id="signon-password-input" autocomplete="new-password">
-        </div>
-        <button id="signon-button">Sign Up</button>
-    </form>
-
-
-    <div id="extra-info-container">
-        <!-- Collect info on user: payment info-->
-    </div>
-
 </div>
 
+
+<div id="footer">
+    <!-- TODO: Add footer -->
+</div>
 
 
 </body>
