--- a/src/main/resources/static/styles/constants.scss
+++ b/src/main/resources/static/styles/constants.scss
@@ -3,9 +3,9 @@
 $paragraphFamily: "Open Sans", sans;
 $headingFamily: "SUSE", sans;
 
-$light: #C6FFDE;
-$accent: #16DE69;
-$dark: #041C0E;
+$secondary: #111111;
+$accent: #787878;
+$primary: #EEEEEE;
 
 
 h1 {
@@ -13,145 +13,63 @@ h1 {
   font-weight: 700;
   margin: 0;
   font-size: 2.75em;
+  color: $primary;
 }
 h2 {
   font-family: $headingFamily;
   font-weight: 700;
   margin: 0;
   font-size: 2.5em;
+  color: $primary;
 }
 h3 {
   font-family: $headingFamily;
   font-weight: 600;
   margin: 0;
   font-size: 2.25em;
+  color: $primary;
 }
 h4 {
   font-family: $headingFamily;
   font-weight: 600;
   margin: 0;
   font-size: 2em;
+  color: $primary;
 }
 h5 {
   font-family: $headingFamily;
   font-weight: 500;
   margin: 0;
   font-size: 1.75em;
+  color: $primary;
 }
 h6 {
   font-family: $headingFamily;
   font-weight: 500;
   margin: 0;
   font-size: 1.65em;
+  color: $primary;
 }
 p, input {
   font-family: $paragraphFamily;
   margin: 0;
+  color: $primary;
 }
+
 a {
   position:relative;
   font-family: $paragraphFamily;
   text-decoration: none;
   margin: 0;
-  color: mix($dark, $accent, 25%);
-}
-button {
-  width: fit-content;
-  text-align: center;
-  font-family: $headingFamily;
-  font-weight: 600;
-  font-size: 1.25em;
-  background: none;
-  color: darken($accent, 10%);
-  border: 2px solid $accent;
-  padding: 0.5em 0.75em;
-  border-radius: 1em;
-  transition: background 0.5s, color 0.5s;
-}
-button.dark {
   color: $accent;
-  background: none;
 }
-button:hover {
-  background: $accent;
-  color: $dark;
-}
-
-
-body {
-  position: relative;
-  margin: 0;
-  width: 100%;
-  height: 100vh;
-}
-.container {
-  height: 100%;
-}
-
-
-.light {
-  background-color: $light;
-  color: $dark;
-}
-.light-nobg {
-  color: $dark;
-}
-.dark {
-  background-color: $dark;
-  color: $light;
-}
-::-moz-selection, .light-nobg::-moz-selection {
-  color: $light;
-  background: $dark;
-}
-::selection, .light-nobg::selection {
-  color: $light;
-  background: $dark;
-}
-.dark::-moz-selection {
-  background: $light;
-  color: $dark;
-}
-.dark::selection {
-  background: $light;
-  color: $dark;
-}
-
-
-body {
-  overflow-x: hidden;
-}
-span {
-  will-change: transform, opacity;
-}
-
-::-webkit-scrollbar {
-  width: 0.5em;
-}
-::-webkit-scrollbar-track {
-  background: transparent;
-}
-::-webkit-scrollbar-thumb {
-  background: $accent;
-  border-radius: 0.25em;
-}
-::-webkit-resizer {
-  display: none;
-}
-::-webkit-scrollbar-button {
-  display: none;
-}
-
-
-
 a.link-hover {
   position: relative;
 }
-
 a.link-hover::after {
   width: 0%;
   height: 3px;
-  background: mix($dark, $accent, 25%);
+  background: $accent;
   content: "";
   display: block;
   position: absolute;
@@ -163,16 +81,68 @@ a.link-hover:hover::after {
   width: 100%;
 }
 
-#site-content {
-  height: 100vh;
+button {
   width: fit-content;
-  display: flex;
-  flex-flow: row;
-  justify-content: center;
-  align-items: center;
-  //padding-left: 27vw;
-  z-index: 1;
+  text-align: center;
+  font-family: $headingFamily;
+  font-weight: 600;
+  font-size: 1.25em;
   background: none;
-  transform: scaleY(1.01);
-  will-change: transform;
+  color: $accent;
+  border: 2px solid $accent;
+  padding: 0.5em 0.75em;
+  border-radius: 1em;
+  transition: background 0.5s, color 0.5s;
+}
+button.dark {
+  color: $accent;
+  background: none;
+}
+button:hover {
+  background: $accent;
+  color: $primary;
+}
+
+
+body {
+  position: relative;
+  margin: 0;
+  width: 100%;
+  min-height: 100vh;
+  background: $secondary;
+}
+
+
+#site-content {
+  background: $secondary;
+  width: 100%;
+  min-height: 100vh;
+}
+
+
+::-moz-selection {
+  color: $secondary;
+  background: $primary;
+}
+::selection {
+  color: $secondary;
+  background: $primary;
+}
+
+
+::-webkit-scrollbar {
+  width: 0.3em;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: $accent;
+  border-radius: 0.15em;
+}
+::-webkit-resizer {
+  display: none;
+}
+::-webkit-scrollbar-button {
+  display: none;
 }
