--- a/src/main/resources/static/styles/home/current-featured.css
+++ b/src/main/resources/static/styles/home/current-featured.css
@@ -1,4 +1,4 @@
-#approaches-container {
+#current-featured {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -6,3 +6,5 @@
   justify-content: center;
   align-items: center;
 }
+
+/*# sourceMappingURL=current-featured.css.map */
