--- a/src/main/resources/static/styles/home/discount-promo.css
+++ b/src/main/resources/static/styles/home/discount-promo.css
@@ -1,4 +1,4 @@
-#approaches-container {
+#discount-promo {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -6,3 +6,5 @@
   justify-content: center;
   align-items: center;
 }
+
+/*# sourceMappingURL=discount-promo.css.map */
