--- a/src/main/resources/static/styles/home/location-container.css
+++ b/src/main/resources/static/styles/home/location-container.css
@@ -1,4 +1,4 @@
-#approaches-container {
+#location-container {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -6,3 +6,5 @@
   justify-content: center;
   align-items: center;
 }
+
+/*# sourceMappingURL=location-container.css.map */
