--- a/src/main/resources/static/styles/home/member-benefit-promo.css
+++ b/src/main/resources/static/styles/home/member-benefit-promo.css
@@ -1,4 +1,4 @@
-#approaches-container {
+#member-benefit-promo {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -6,3 +6,5 @@
   justify-content: center;
   align-items: center;
 }
+
+/*# sourceMappingURL=member-benefit-promo.css.map */
