--- a/src/main/resources/static/styles/home/top-ratings-display.css
+++ b/src/main/resources/static/styles/home/top-ratings-display.css
@@ -1,4 +1,4 @@
-#approaches-container {
+#top-ratings-display {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -6,3 +6,5 @@
   justify-content: center;
   align-items: center;
 }
+
+/*# sourceMappingURL=top-ratings-display.css.map */
